--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 77,
    "id": "b12f744d-2ee1-4b62-ba24-0499be1d1cf1",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "<function Connection.close()>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 78,
    "id": "77c9e0e0-0d87-4b88-989e-4222e5fa3331",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
        "<function Connection.close()>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 79,
    "id": "be6fffae-0b75-4c8c-9c9d-7c270abd904b",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        "[28265 rows x 11 columns]>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 80,
    "id": "eab92555-c21d-412d-bb72-5890bf1b4ea4",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
        "[27758 rows x 7 columns]>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 81,
    "id": "e7e44d0a-50b1-4d8f-99f3-cb7244bad584",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
        "[3198 rows x 35 columns]>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 82,
    "id": "a6b13d52-ebdb-4dbe-b8ba-77f67de377ec",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 83,
    "id": "cb608fe4-910b-486f-a914-c0e9ca3550b1",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 84,
    "id": "1518fde3-03d2-4030-946a-8bdfac615ce9",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
        "(27741, 7)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 85,
    "id": "d84ca4e0-aad4-43bf-8584-e8ecead22039",
    "metadata": {},
    "outputs": [],
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 86,
    "id": "d96d4ad6-1a9f-4258-beec-0afd4697adf8",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
        "[3198 rows x 3 columns]>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 87,
    "id": "77b9dd68-8723-4531-8466-5dcf4c1566c0",
    "metadata": {},
    "outputs": [],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 88,
    "id": "c9431520-a621-4256-adef-01eaddb1137c",
    "metadata": {},
    "outputs": [
@@ -373,7 +373,7 @@
        "[28265 rows x 13 columns]>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 102,
+   "id": "3741349a-375a-4761-9e20-22e01cc2bb1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(28265, 13)"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "county_info.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "id": "f333409e-27f4-4824-8ccb-7d68707d833e",
    "metadata": {},
    "outputs": [],
@@ -394,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 90,
    "id": "5c85057f-acf2-459f-9289-d97d0b14e07e",
    "metadata": {},
    "outputs": [],
@@ -407,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 91,
    "id": "9f96ab30-a6d4-40e2-a637-2ce189c13501",
    "metadata": {},
    "outputs": [
@@ -499,7 +520,7 @@
        "8  2014    3.768738"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 92,
    "id": "84d66aca-5627-4393-9de2-5b85e6105240",
    "metadata": {},
    "outputs": [
@@ -535,35 +556,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 93,
    "id": "6c207b43-7fb2-4295-9a6b-27adabb03cb7",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'rpy2'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[63], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrpy2\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrpy2\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrinterface\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mri\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrpy2\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrobjects\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mro\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'rpy2'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import rpy2\n",
     "import rpy2.rinterface as ri\n",
     "import rpy2.robjects as ro\n",
-    "from rpy2.robjects.packages import importr\n",
+    "from rpy2.robjects import pandas2ri\n",
     "\n",
     "#ri.initr()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "f9412072-2db0-418e-aecc-0c60fdfd9f71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'data.frame':\t27741 obs. of  7 variables:\n",
+      " $ ..1         : chr  \"1\" \"2\" \"3\" \"4\" ...\n",
+      " $ BUYER_COUNTY: chr  \"ABBEVILLE\" \"ABBEVILLE\" \"ABBEVILLE\" \"ABBEVILLE\" ...\n",
+      " $ BUYER_STATE : chr  \"SC\" \"SC\" \"SC\" \"SC\" ...\n",
+      " $ year        : chr  \"2006\" \"2007\" \"2008\" \"2009\" ...\n",
+      " $ count       : chr  \"877\" \"908\" \"871\" \"930\" ...\n",
+      " $ DOSAGE_UNIT : chr  \"363620\" \"402940\" \"424590\" \"467230\" ...\n",
+      " $ countyfips  : chr  \"45001\" \"45001\" \"45001\" \"45001\" ...\n",
+      "'data.frame':\t28265 obs. of  13 variables:\n",
+      " $ ..1         : chr  \"1\" \"2\" \"3\" \"4\" ...\n",
+      " $ BUYER_COUNTY: chr  \"AUTAUGA\" \"BALDWIN\" \"BARBOUR\" \"BIBB\" ...\n",
+      " $ BUYER_STATE : chr  \"AL\" \"AL\" \"AL\" \"AL\" ...\n",
+      " $ countyfips  : chr  \"01001\" \"01003\" \"01005\" \"01007\" ...\n",
+      " $ STATE       : chr  \"1\" \"1\" \"1\" \"1\" ...\n",
+      " $ COUNTY      : chr  \"1\" \"3\" \"5\" \"7\" ...\n",
+      " $ county_name : chr  \"Autauga\" \"Baldwin\" \"Barbour\" \"Bibb\" ...\n",
+      " $ NAME        : chr  \"Autauga County, Alabama\" \"Baldwin County, Alabama\" \"Barbour County, Alabama\" \"Bibb County, Alabama\" ...\n",
+      " $ variable    : chr  \"B01003_001\" \"B01003_001\" \"B01003_001\" \"B01003_001\" ...\n",
+      " $ year        : chr  \"2006\" \"2006\" \"2006\" \"2006\" ...\n",
+      " $ population  : chr  \"51328\" \"168121\" \"27861\" \"22099\" ...\n",
+      " $ Areaname    : chr  \"Autauga, AL\" \"Baldwin, AL\" \"Barbour, AL\" \"Bibb, AL\" ...\n",
+      " $ LND110210D  : chr  \"594.44\" \"1589.78\" \"884.88\" \"622.58\" ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "import rpy2.robjects as ro\n",
+    "\n",
+    "r_script_path = 'hw4.r'\n",
+    "\n",
+    "with open(r_script_path, 'r') as r_file:\n",
+    "    r_script_content = r_file.read()\n",
+    "ro.r(r_script_content)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "6761beb8-e61d-4bfd-9a16-d50be2693d98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "land_R = pandas2ri.rpy2py(ro.r['land'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "8cd77712-8a5b-4202-ac9c-eb7c2dbc965c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "population_R = pandas2ri.rpy2py(ro.r['population'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "4f0be4f9-cd98-497b-a186-d03f2346e287",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "land_area_R = pandas2ri.rpy2py(ro.r['land_area'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "75dfe3ff-98ce-47cc-9c24-4ca7f9458622",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annual_R = pandas2ri.rpy2py(ro.r['annual'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "c5097574-bf30-4cf1-aafd-aee298fe8f4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "county_info_R = pandas2ri.rpy2py(ro.r['county_info'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "10a16f5a-f58e-4871-9c0b-8f1371c9a17c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(28265, 13)"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "county_info_R.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "5282c03b-f7b0-4df6-b18b-5d040c8d8c25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(28265, 13)"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "county_info.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6002913d-85ff-4e89-9f4e-45f1ec02b4ed",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -571,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6761beb8-e61d-4bfd-9a16-d50be2693d98",
+   "id": "c3d4df3d-6275-4a6c-9b22-b23efc6130ba",
    "metadata": {},
    "outputs": [],
    "source": []
